[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "datethesong"
version = "0.0.1"
authors = [
  { name="Youssef Ayachi", email="youssef-ayachi@outlook.com" },
]
description = "Use linear regression methods to guess the release year of songs"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/YoussefAyachii/datethesong"
"Bug Tracker" = "https://github.com/YoussefAyachii/datethesong/issues"
